fixed bleeding of content box outside of body

--- a/style.css
+++ b/style.css
@@ -31,10 +31,12 @@ body{
 }
 
 #background{
-    z-index: 0;
+    z-index: 1;
     height: 100vh;
     background-image: url(https://pbs.twimg.com/media/DbP0Cd8U0AEpB2I?format=jpg&name=large);
     background-position: center;
+    /* background-repeat: repeat-y; */
+    background-size: cover;
 }
 
 #background::before{
@@ -125,3 +127,8 @@ footer p{
     padding: 10px;
 }
 
+
+.info{
+    overflow-y:auto ;
+    height: 45vh;
+}
